--- a/frontend/src/scss/login.scss
+++ b/frontend/src/scss/login.scss
@@ -4,55 +4,62 @@
   @include flex(center, center);
   height: 100%;
   .app__login {
-    @include flex(center, center);
-    height: 50%;
-    width: 50%;
+    @include flex(stretch, center);
     border-radius: 1rem;
     border: 1px solid lightgray;
     overflow: hidden;
 
     &__left {
+      @include flex(flex-start, space-between);
       flex: 1;
-      @include flex(justify-start, center);
       flex-direction: column;
-      gap: 1rem;
-      width: 100%;
-      height: 100%;
       padding: 1rem 2rem;
-      color: lightgray;
-      background: center / cover url("../../public/heart.png"),
-        linear-gradient(rgba(80, 129, 204, 1), rgba(213, 42, 116, 1));
+
+      div {
+        @include flex(center, flex-start);
+        gap: 0.5rem;
+
+        span {
+          font-weight: bold;
+          color: rgb(213, 42, 116);
+        }
+      }
+
+      form {
+        @include flex(flex-start, center);
+        flex-direction: column;
+        gap: 1rem;
+        width: 100%;
+        input,
+        button {
+          width: 100%;
+          padding: 0.5rem 1rem;
+          border-radius: 0.5rem;
+          border: 1px solid gray;
+        }
+
+        button {
+          background-color: rgb(213, 42, 116);
+          color: white;
+          border: none;
+        }
+      }
 
       span {
-        a {
-          text-decoration: none;
-          font-weight: bold;
-        }
+        color: gray;
+      }
+
+      a {
+        color: rgb(213, 42, 116);
       }
     }
 
     &__right {
-      flex: 1;
       @include flex(center, center);
-      flex-direction: column;
-      gap: 1rem;
-      padding: 1rem 2rem;
-
-      input {
-        width: 75%;
-        padding: 1rem;
-        border-radius: 0.5rem;
-        border: 1px solid gray;
-      }
-
-      button {
-        width: 75%;
-        padding: 1rem 2rem;
-        color: white;
-        background-color: #d52a74;
-        border: none;
-        border-radius: 0.5rem;
-        cursor: pointer;
+      flex: 1;
+      background: linear-gradient(rgba(80, 129, 204, 1), rgba(213, 42, 116, 1));
+      img {
+        object-fit: cover;
       }
     }
   }
