--- a/frontend/src/scss/login.scss
+++ b/frontend/src/scss/login.scss
@@ -3,6 +3,7 @@
 .app__login__wrapper {
   @include flex(center, center);
   height: 100%;
+
   .app__login {
     @include flex(stretch, center);
     border-radius: 1rem;
@@ -15,7 +16,7 @@
       flex-direction: column;
       padding: 1rem 2rem;
 
-      div {
+      .app__login__logo {
         @include flex(center, flex-start);
         gap: 0.5rem;
 
@@ -30,15 +31,14 @@
         flex-direction: column;
         gap: 1rem;
         width: 100%;
-        input,
+
+        .app__login__form__inputs {
+          width: 100%;
+        }
         button {
           width: 100%;
           padding: 0.5rem 1rem;
           border-radius: 0.5rem;
-          border: 1px solid gray;
-        }
-
-        button {
           background-color: rgb(213, 42, 116);
           color: white;
           border: none;
@@ -57,9 +57,10 @@
     &__right {
       @include flex(center, center);
       flex: 1;
+      max-width: 50%;
       background: linear-gradient(rgba(80, 129, 204, 1), rgba(213, 42, 116, 1));
       img {
-        object-fit: cover;
+        object-fit: contain;
       }
     }
   }
