--- a/frontend/src/scss/login.scss
+++ b/frontend/src/scss/login.scss
@@ -3,65 +3,65 @@
 .app__login__wrapper {
   @include flex(center, center);
   height: 100%;
+}
 
-  .app__login {
-    @include flex(stretch, center);
-    border-radius: 1rem;
-    border: 1px solid lightgray;
-    overflow: hidden;
+.app__login {
+  @include flex(stretch, center);
+  border-radius: 1rem;
+  border: 1px solid lightgray;
+  overflow: hidden;
+}
 
-    &__left {
-      @include flex(flex-start, space-between);
-      flex: 1;
-      flex-direction: column;
-      padding: 1rem 2rem;
+.app__login__left {
+  @include flex(flex-start, space-between);
+  flex: 1;
+  flex-direction: column;
+  padding: 1rem 2rem;
 
-      .app__login__logo {
-        @include flex(center, flex-start);
-        gap: 0.5rem;
+  .app__login__logo {
+    @include flex(center, flex-start);
+    gap: 0.5rem;
 
-        span {
-          font-weight: bold;
-          color: rgb(213, 42, 116);
-        }
-      }
-
-      form {
-        @include flex(flex-start, center);
-        flex-direction: column;
-        gap: 1rem;
-        width: 100%;
-
-        .app__login__form__inputs {
-          width: 100%;
-        }
-        button {
-          width: 100%;
-          padding: 0.5rem 1rem;
-          border-radius: 0.5rem;
-          background-color: rgb(213, 42, 116);
-          color: white;
-          border: none;
-        }
-      }
-
-      span {
-        color: gray;
-      }
-
-      a {
-        color: rgb(213, 42, 116);
-      }
+    span {
+      font-weight: bold;
+      color: rgb(213, 42, 116);
     }
+  }
 
-    &__right {
-      @include flex(center, center);
-      flex: 1;
-      max-width: 50%;
-      background: linear-gradient(rgba(80, 129, 204, 1), rgba(213, 42, 116, 1));
-      img {
-        object-fit: contain;
-      }
+  form {
+    @include flex(flex-start, center);
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+
+    .app__login__form__inputs {
+      width: 100%;
     }
+    button {
+      width: 100%;
+      padding: 0.5rem 1rem;
+      border-radius: 0.5rem;
+      background-color: rgb(213, 42, 116);
+      color: white;
+      border: none;
+    }
+  }
+
+  span {
+    color: gray;
+  }
+
+  a {
+    color: rgb(213, 42, 116);
+  }
+}
+
+.app__login__right {
+  @include flex(center, center);
+  flex: 1;
+  max-width: 50%;
+  background: linear-gradient(rgba(80, 129, 204, 1), rgba(213, 42, 116, 1));
+  img {
+    object-fit: contain;
   }
 }
