--- a/frontend/src/scss/login.scss
+++ b/frontend/src/scss/login.scss
@@ -3,6 +3,7 @@
 .app__login__wrapper {
   @include flex(center, center);
   height: 100%;
+  padding: 1rem;
 }
 
 .app__login {
@@ -10,6 +11,11 @@
   border-radius: 1rem;
   border: 1px solid lightgray;
   overflow: hidden;
+
+  @media screen and (max-width: 480px) {
+    border: none;
+    height: 100%;
+  }
 }
 
 .app__login__left {
@@ -63,5 +69,9 @@
   background: linear-gradient(rgba(80, 129, 204, 1), rgba(213, 42, 116, 1));
   img {
     object-fit: contain;
+  }
+
+  @media screen and (max-width: 480px) {
+    display: none;
   }
 }
