Add some letter spacing to logo

--- a/frontend/src/scss/login.scss
+++ b/frontend/src/scss/login.scss
@@ -31,6 +31,7 @@
     span {
       font-weight: bold;
       color: rgb(213, 42, 116);
+      letter-spacing: 1px;
     }
   }
 
@@ -43,6 +44,7 @@
     .app__login__form__inputs {
       width: 100%;
     }
+
     button {
       width: 100%;
       padding: 0.5rem 1rem;
