Add cursor pointer to login and sign up buttons

--- a/frontend/src/scss/login.scss
+++ b/frontend/src/scss/login.scss
@@ -41,6 +41,7 @@
       background-color: rgb(213, 42, 116);
       color: white;
       border: none;
+      cursor: pointer;
     }
   }
   span {
