--- a/frontend/src/scss/register.scss
+++ b/frontend/src/scss/register.scss
@@ -47,6 +47,7 @@
       background-color: rgb(213, 42, 116);
       color: white;
       border: none;
+      cursor: pointer;
     }
   }
   span {
