--- a/frontend/src/scss/register.scss
+++ b/frontend/src/scss/register.scss
@@ -49,6 +49,11 @@
       border: none;
       cursor: pointer;
     }
+
+    button:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+    }
   }
   span {
     color: gray;
