Connect login form to login endpoint

--- a/frontend/src/scss/login.scss
+++ b/frontend/src/scss/login.scss
@@ -43,6 +43,11 @@
       border: none;
       cursor: pointer;
     }
+
+    button:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+    }
   }
   span {
     color: gray;
