--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -11,3 +11,9 @@ body,
   height: 100vh;
   width: 100%;
 }
+
+.layout {
+  display: flex;
+  @include flex(stretch, space-between);
+  height: 100%;
+}
