--- a/frontend/src/scss/navbar.scss
+++ b/frontend/src/scss/navbar.scss
@@ -11,7 +11,8 @@ nav {
   @include flex(center, flex-start);
   gap: 0.5rem;
   padding: 1.5rem 0.75rem;
-
+  text-decoration: none;
+  color: black;
   .ekg-line {
     fill: black;
     stroke: black;
