--- a/frontend/src/scss/navbar.scss
+++ b/frontend/src/scss/navbar.scss
@@ -15,6 +15,7 @@ nav {
     @include flex(center, space-between);
     width: 100%;
     border-right: none;
+    border-top: 1px solid rgb(219, 219, 219);
   }
 }
 
