--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,6 +1,6 @@
 @use "./scss/" as *;
 
-@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Julee&family=Mate+SC&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Mate+SC&display=swap");
 
 * {
   padding: 0;
