--- a/frontend/src/scss/navbar.scss
+++ b/frontend/src/scss/navbar.scss
@@ -6,7 +6,7 @@ nav {
   border-right: 1px solid rgb(219, 219, 219);
   width: 367px;
   padding: 1rem;
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   bottom: 0;
