Fix navbar positioning and add some temporary photos for profile

--- a/frontend/src/scss/navbar.scss
+++ b/frontend/src/scss/navbar.scss
@@ -6,7 +6,7 @@ nav {
   border-right: 1px solid rgb(219, 219, 219);
   width: 367px;
   padding: 1rem;
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
@@ -27,6 +27,8 @@ nav {
     left: 0;
     bottom: 0;
     top: auto;
+    z-index: 10;
+    background-color: white;
   }
 }
 
