Work on responsive ness of navbar and profile page

--- a/frontend/src/scss/navbarItem.scss
+++ b/frontend/src/scss/navbarItem.scss
@@ -39,6 +39,7 @@ button {
     color: black;
     font-size: 1rem;
     pointer-events: none;
+    text-transform: capitalize;
     @media screen and (max-width: 768px) {
       display: none;
     }
