--- a/frontend/src/scss/profile.scss
+++ b/frontend/src/scss/profile.scss
@@ -1,19 +1,21 @@
 @use "./index.scss" as *;
 
 .app__profile__wrapper {
-  width: 100%;
-  height: 100%;
-  padding: 2rem 1rem;
   @include flex(flex-start, center);
-  margin-left: 367px;
-  @media screen and (max-width: 1024px) {
-    margin-left: 277px;
+  width: 100%;
+  overflow-y: scroll;
+  padding: 2rem 1rem;
+  margin-left: 335px;
+
+  @media screen and (max-width: 1919px) {
+    margin-left: 245px;
   }
   @media screen and (max-width: 768px) {
     margin-left: 72px;
   }
   @media screen and (max-width: 480px) {
     margin-left: 0;
+    margin-bottom: 72px;
   }
 }
 
@@ -23,7 +25,7 @@
   width: 70%;
   gap: 2rem;
 
-  @media screen and (max-width: 1024px) {
+  @media screen and (max-width: 1919px) {
     width: 85%;
   }
   @media screen and (max-width: 768px) {
@@ -31,7 +33,6 @@
   }
 
   @media screen and (max-width: 480px) {
-    @include flex(flex-start, center);
     gap: 1rem;
   }
 }
@@ -45,12 +46,12 @@
   }
 
   &__img {
-    flex: 1;
     @include flex(center, center);
+    flex: 1;
 
     @media screen and (max-width: 735px) {
-      flex: 0;
       @include flex(center, flex-start);
+      flex: 0;
     }
 
     img {
@@ -66,35 +67,35 @@
   }
 
   &__bio {
-    flex: 2;
-    flex-direction: column;
     @include flex(flex-start, center);
+    flex-direction: column;
+    flex: 2;
     gap: 1rem;
 
     &__heading {
-      width: 100%;
       @include flex(center, flex-start);
       gap: 1rem;
+
+      @media screen and (max-width: 735px) {
+        flex-direction: column;
+        @include flex(flex-start, flex-start);
+      }
+
       span {
         font-size: 1.25rem;
       }
 
       button {
-        background-color: #efefef;
-        padding: 0.5rem 1rem;
         width: fit-content;
+        padding: 0.5rem 1rem;
+        background-color: #efefef;
         border-radius: 0.5rem;
         font-weight: bold;
         cursor: pointer;
 
         @media screen and (max-width: 735px) {
-          width: 60%;
+          width: 10rem;
         }
-      }
-
-      @media screen and (max-width: 735px) {
-        flex-direction: column;
-        @include flex(flex-start, flex-start);
       }
     }
 
@@ -113,11 +114,13 @@
     }
 
     &__main {
-      flex-direction: column;
       @include flex(flex-start, center);
+      flex-direction: column;
+
       span {
         line-height: 1.25rem;
       }
+
       @media screen and (max-width: 735px) {
         display: none;
       }
@@ -125,33 +128,55 @@
   }
 }
 
-.app__profile__header__bio__main_mobile {
+.app__profile__header__bio__main__mobile {
   width: 100%;
   display: none;
+
   @media screen and (max-width: 735px) {
-    flex-direction: column;
     @include flex(flex-start, flex-start);
+    flex-direction: column;
     span {
       line-height: 1.25rem;
     }
   }
 }
 
-.app__profile__main {
-  padding-top: 1rem;
+.app__profile__header__bio__stats__mobile {
   width: 100%;
-  border-top: 1px solid rgb(219, 219, 219);
+  display: none;
+  padding: 0.5rem 0rem;
+  border: 1px solid rgb(219, 219, 219);
+  border-left: none;
+  border-right: none;
+
+  @media screen and (max-width: 735px) {
+    @include flex(center, space-around);
+    span {
+      text-align: center;
+      line-height: 1.25rem;
+    }
+  }
+}
+
+.app__profile__main {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 0.5rem;
-
-  @media screen and (max-width: 480px) {
-    gap: 0.25rem;
-  }
+  width: 100%;
+  padding-top: 2rem;
+  border-top: 1px solid rgb(219, 219, 219);
 
   img {
     object-fit: cover;
     width: 100%;
     aspect-ratio: 1/1;
+  }
+  @media screen and (max-width: 735px) {
+    padding: 0;
+    border-top: none;
+  }
+
+  @media screen and (max-width: 480px) {
+    gap: 0.25rem;
   }
 }
