--- a/frontend/src/scss/updateProfile.scss
+++ b/frontend/src/scss/updateProfile.scss
@@ -3,6 +3,7 @@
 form {
   @include flex(flex-start, center);
   flex-direction: column;
+  width: 100%;
 }
 
 .update__profile__img {
@@ -11,6 +12,7 @@ form {
   border-top: 1px solid rgb(219, 219, 219);
   border-bottom: 1px solid rgb(219, 219, 219);
   padding: 0.5rem 0;
+  width: 100%;
 
   img {
     height: 5rem;
@@ -24,7 +26,7 @@ form {
 
     span {
       @include flex(center, center);
-      gap: 0.25rem;
+      gap: 0.5rem;
       svg {
         height: 24px;
         width: 24px;
@@ -47,7 +49,7 @@ form {
     input,
     select,
     textarea {
-      width: 12rem;
+      width: 75%;
       border: 0px;
       outline: none;
       border-bottom: 1px solid rgb(219, 219, 219);
