--- a/frontend/src/scss/navbar.scss
+++ b/frontend/src/scss/navbar.scss
@@ -3,7 +3,7 @@
 nav {
   @include flex(flex-start, space-between);
   flex-direction: column;
-  border-right: 1px solid rgb(219, 219, 219);
+  border-right: 1px solid $light-gray;
   width: 335px;
   padding: 1rem;
   position: fixed;
@@ -18,17 +18,18 @@ nav {
   }
 
   @media screen and (max-width: 480px) {
-    flex-direction: row;
-    @include flex(center, space-between);
-    width: 100%;
-    border-right: none;
-    border-top: 1px solid rgb(219, 219, 219);
-    right: 0;
-    left: 0;
-    bottom: 0;
-    top: auto;
-    z-index: 10;
-    background-color: white;
+    display: none;
+    // flex-direction: row;
+    // @include flex(center, space-between);
+    // width: 100%;
+    // border-right: none;
+    // border-top: 1px solid rgb(219, 219, 219);
+    // right: 0;
+    // left: 0;
+    // bottom: 0;
+    // top: auto;
+    // z-index: 10;
+    // background-color: white;
   }
 }
 
