--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -18,8 +18,27 @@ body,
   @include flex(stretch, center);
   height: 100%;
 
+  .app__layout__main__wrapper {
+    @include flex(flex-start, center);
+    width: 100%;
+    overflow-y: scroll;
+    padding: 2rem 1rem;
+    margin-left: 335px;
+
+    @media screen and (max-width: 1919px) {
+      margin-left: 245px;
+    }
+    @media screen and (max-width: 768px) {
+      margin-left: 72px;
+    }
+    @media screen and (max-width: 480px) {
+      margin-left: 0;
+      margin-bottom: 72px;
+    }
+  }
+
   @media screen and (max-width: 480px) {
-    flex-direction: column-reverse;
+    flex-direction: column;
     @include flex(center, space-between);
   }
 }
@@ -28,7 +47,7 @@ body,
   width: 100%;
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
-  background-color: rgb(213, 42, 116);
+  background-color: $primary-color;
   color: white;
   border: none;
   cursor: pointer;
