--- a/frontend/src/scss/profile.scss
+++ b/frontend/src/scss/profile.scss
@@ -1,24 +1,5 @@
 @use "./index.scss" as *;
 
-.app__profile__wrapper {
-  @include flex(flex-start, center);
-  width: 100%;
-  overflow-y: scroll;
-  padding: 2rem 1rem;
-  margin-left: 335px;
-
-  @media screen and (max-width: 1919px) {
-    margin-left: 245px;
-  }
-  @media screen and (max-width: 768px) {
-    margin-left: 72px;
-  }
-  @media screen and (max-width: 480px) {
-    margin-left: 0;
-    margin-bottom: 72px;
-  }
-}
-
 .app__profile {
   @include flex(center, flex-start);
   flex-direction: column;
@@ -88,7 +69,7 @@
       button {
         width: fit-content;
         padding: 0.5rem 1rem;
-        background-color: #efefef;
+        background-color: $light-btn-bg;
         border-radius: 0.5rem;
         font-weight: bold;
         cursor: pointer;
@@ -145,7 +126,7 @@
   width: 100%;
   display: none;
   padding: 0.5rem 0rem;
-  border: 1px solid rgb(219, 219, 219);
+  border: 1px solid $light-gray;
   border-left: none;
   border-right: none;
 
@@ -164,7 +145,7 @@
   gap: 0.5rem;
   width: 100%;
   padding-top: 2rem;
-  border-top: 1px solid rgb(219, 219, 219);
+  border-top: 1px solid $light-gray;
 
   img {
     object-fit: cover;
@@ -182,6 +163,6 @@
 }
 
 .app__profile__header__bio_pronouns {
-  color: #8e8e8e;
+  color: $light-font;
   margin-left: 0.5rem;
 }
