--- a/frontend/src/scss/navfooter.scss
+++ b/frontend/src/scss/navfooter.scss
@@ -6,13 +6,9 @@
   @media screen and (max-width: 480px) {
     display: flex;
     flex-direction: row;
-    @include flex(center, space-around);
+    @include flex(center, space-between);
     width: 100%;
     border-top: 1px solid $light-gray;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    top: auto;
-    z-index: 10;
+    padding: 0.5rem 1rem;
   }
 }
