--- a/frontend/src/scss/modal.scss
+++ b/frontend/src/scss/modal.scss
@@ -1,23 +1,30 @@
 @use "../scss/index.scss" as *;
 
 #modal {
-  border: none;
-  margin: auto;
-  padding: 0.5rem 1rem;
-  border-radius: 0.5rem;
-  width: min(450px, 90%);
-}
+  @include flex(center, center);
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 
-#modal::backdrop {
-  background: black;
-  opacity: 0.4;
+  @media screen and (max-width: 480px) {
+    @include flex(flex-end, center);
+  }
 }
 
 .modal__content {
-  @include flex(flex-start, center);
+  @include flex(center, center);
   flex-direction: column;
   gap: 0.5rem;
-
+  background-color: white;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  width: min(450px, 90%);
   &__header {
     margin: auto;
     font-weight: bold;
@@ -25,5 +32,13 @@
 
   &__main {
     width: 100%;
+    flex: 1;
+  }
+
+  @media screen and (max-width: 480px) {
+    width: 100%;
+    height: 85%;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
   }
 }
