--- a/frontend/src/scss/updateProfile.scss
+++ b/frontend/src/scss/updateProfile.scss
@@ -4,6 +4,8 @@ form {
   @include flex(flex-start, center);
   flex-direction: column;
   width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .update__profile__img {
@@ -42,11 +44,12 @@ form {
 }
 
 .update__profile__main {
-  @include flex(flex-start, center);
+  @include flex(flex-start, flex-start);
   flex-direction: column;
   width: 100%;
   border-bottom: 1px solid $light-gray;
   padding: 0.5rem 0;
+  flex: 1;
 
   div {
     @include flex(flex-start, space-between);
@@ -73,4 +76,7 @@ form {
   @include flex(center, space-around);
   width: 100%;
   gap: 0.5rem;
+  padding-top: 1rem;
+  position: absolute;
+  bottom: 1rem;
 }
