--- a/frontend/src/scss/modal.scss
+++ b/frontend/src/scss/modal.scss
@@ -8,7 +8,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
 
@@ -25,10 +25,6 @@
   padding: 1rem;
   border-radius: 0.5rem;
   width: min(450px, 90%);
-  &__header {
-    margin: auto;
-    font-weight: bold;
-  }
 
   &__main {
     width: 100%;
@@ -37,7 +33,7 @@
 
   @media screen and (max-width: 480px) {
     width: 100%;
-    height: 85%;
+    height: 65%;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
   }
