--- a/frontend/src/scss/modal.scss
+++ b/frontend/src/scss/modal.scss
@@ -24,7 +24,7 @@
   background-color: white;
   padding: 1rem;
   border-radius: 0.5rem;
-  width: min(450px, 90%);
+  width: clamp(450px, 450px, 90%);
 
   &__main {
     width: 100%;
@@ -33,7 +33,7 @@
 
   @media screen and (max-width: 480px) {
     width: 100%;
-    height: 65%;
+    height: 85%;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
   }
