--- a/frontend/src/scss/variables.scss
+++ b/frontend/src/scss/variables.scss
@@ -1,5 +1,5 @@
 $font-family-heading: "Mate SC", serif;
-$primary-color: rgb(213, 42, 116);
-$light-gray: rgb(219, 219, 219);
+$primary-color: #d52a74;
+$light-gray: #dbdbdb;
 $light-font: #8e8e8e;
 $light-btn-bg: #efefef;
