--- a/frontend/src/scss/createPost.scss
+++ b/frontend/src/scss/createPost.scss
@@ -6,11 +6,15 @@
   border-bottom: 1px solid $light-gray;
 }
 
-#create__post__content {
+.create__post__content {
+  height: 480px;
+}
+
+.create__post__content__drag {
   @include flex(center, center);
   flex-direction: column;
   gap: 1rem;
-  height: 480px;
+  height: 100%;
 
   svg {
     height: 5rem;
@@ -26,12 +30,8 @@
     text-decoration: underline;
     cursor: pointer;
   }
-
-  input[type="file"] {
-    display: none;
-  }
 }
 
-.create__post__content__drag {
+.drag__active {
   background-color: $light-gray;
 }
