Make image slider dots smaller

--- a/frontend/src/scss/imageSlider.scss
+++ b/frontend/src/scss/imageSlider.scss
@@ -62,8 +62,8 @@
   bottom: 0.5rem;
   width: 100%;
   .image__slider__dot {
-    width: 0.5rem;
-    height: 0.5rem;
+    width: 6px;
+    height: 6px;
     border-radius: 50%;
     background: rgb(168, 168, 168);
   }
