--- a/frontend/src/scss/createPost.scss
+++ b/frontend/src/scss/createPost.scss
@@ -1,6 +1,6 @@
 @use "../scss/index.scss" as *;
 
-.create_post__header {
+.create__post__header {
   @include flex(center, center);
   padding-bottom: 0.5rem;
   border-bottom: 1px solid $light-gray;
@@ -11,7 +11,14 @@
 }
 
 .create__post__content {
-  height: 480px;
+  @include flex(flex-start, center);
+  @include flex(center, center);
+  width: 100%;
+  aspect-ratio: 1/1;
+
+  @media screen and (max-width: 480px) {
+    height: 100%;
+  }
 }
 
 .create__post__content__drag {
@@ -19,6 +26,7 @@
   flex-direction: column;
   gap: 1rem;
   height: 100%;
+  width: 100%;
 
   svg {
     height: 5rem;
