--- a/frontend/src/scss/imageSlider.scss
+++ b/frontend/src/scss/imageSlider.scss
@@ -2,6 +2,7 @@
 
 .image__slider__wrapper {
   position: relative;
+  width: 100%;
   height: 100%;
 }
 
@@ -10,8 +11,11 @@
   height: 100%;
   img {
     width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    aspect-ratio: 1/1;
     object-fit: cover;
+    position: relative;
   }
 }
 
@@ -53,7 +57,7 @@
   @include flex(center, center);
   gap: 0.25rem;
   position: absolute;
-  bottom: 0.5rem;
+  bottom: 1rem;
   width: 100%;
   .image__slider__dot {
     width: 6px;
