--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -42,6 +42,10 @@ body,
   }
 }
 
+.flex__center__center {
+  @include flex(center, center);
+}
+
 .primary__outline__btn {
   width: 100%;
   padding: 0.5rem 1rem;
