--- a/frontend/src/scss/createPost.scss
+++ b/frontend/src/scss/createPost.scss
@@ -1,7 +1,6 @@
 @use "../scss/index.scss" as *;
 
 .create__post__header {
-  @include flex(center, center);
   padding-bottom: 0.5rem;
   border-bottom: 1px solid $light-gray;
   h4 {
@@ -11,22 +10,17 @@
 }
 
 .create__post__content {
-  @include flex(flex-start, center);
-  @include flex(center, center);
-  width: 100%;
-  aspect-ratio: 1/1;
-
-  @media screen and (max-width: 480px) {
-    height: 100%;
-  }
+  height: calc(100% - 27px);
 }
 
 .create__post__content__drag {
-  @include flex(center, center);
   flex-direction: column;
-  gap: 1rem;
-  height: 100%;
   width: 100%;
+  height: 100%;
+
+  @media screen and (max-width: 480px) {
+    margin: 1rem auto;
+  }
 
   svg {
     height: 5rem;
@@ -36,6 +30,7 @@
 
   span {
     font-size: 1.25rem;
+    padding-bottom: 1rem;
   }
 
   label {
@@ -53,18 +48,12 @@
   flex-direction: column;
   height: 100%;
   gap: 0.5rem;
-  textarea {
-    resize: none;
-    outline: none;
-    border: 0;
-    padding: 0.25rem 0.5rem;
-    width: 100%;
-    flex: 1;
-  }
+
   &__header {
     @include flex(center, flex-start);
     gap: 0.5rem;
     margin-top: 0.5rem;
+    font-weight: bold;
 
     img {
       height: 24px;
@@ -73,9 +62,19 @@
       object-fit: cover;
     }
   }
-}
 
-.create__post__caption__photo {
-  width: 100%;
-  height: 75%;
+  &__photo {
+    width: 100%;
+    max-height: 100%;
+    aspect-ratio: 1/1;
+  }
+
+  textarea {
+    resize: none;
+    outline: none;
+    border: 0;
+    padding: 0.25rem 0.5rem;
+    width: 100%;
+    flex: 1;
+  }
 }
