--- a/frontend/src/scss/imageSlider.scss
+++ b/frontend/src/scss/imageSlider.scss
@@ -7,7 +7,6 @@
 }
 
 .image__slider {
-  @include flex(center, center);
   height: 100%;
   img {
     width: 100%;
@@ -15,17 +14,16 @@
     max-height: 100%;
     aspect-ratio: 1/1;
     object-fit: cover;
-    position: relative;
   }
 }
 
 .image__slider__control {
-  @include flex(center, center);
-  background: rgba(52, 52, 52, 0.8);
+  position: absolute;
   width: fit-content;
   padding: 0.25rem;
   border-radius: 50%;
   z-index: 2;
+  background: rgba(52, 52, 52, 0.8);
   cursor: pointer;
 
   &:hover {
@@ -40,77 +38,41 @@
 }
 
 .left__control {
-  position: absolute;
   top: 50%;
   left: 0.5rem;
   transform: translateY(-50%);
 }
 
 .right__control {
-  position: absolute;
   top: 50%;
   right: 0.5rem;
   transform: translateY(-50%);
 }
 
+.image__slider__add {
+  bottom: 0.5rem;
+  right: 0.5rem;
+}
+
+.image__slider__delete {
+  top: 0.5rem;
+  right: 0.5rem;
+}
+
 .image__slider__dots {
-  @include flex(center, center);
-  gap: 0.25rem;
   position: absolute;
   bottom: 1rem;
+  gap: 0.25rem;
   width: 100%;
+
   .image__slider__dot {
     width: 6px;
     height: 6px;
     border-radius: 50%;
     background: rgb(168, 168, 168);
   }
+
   .active__dot {
     background-color: $primary-color;
-  }
-}
-
-.image__slider__upload__more {
-  position: absolute;
-  z-index: 2;
-  bottom: 0.5rem;
-  right: 0.5rem;
-  background: rgba(52, 52, 52, 0.8);
-  padding: 0.25rem;
-  border-radius: 50%;
-  cursor: pointer;
-  @include flex(center, center);
-
-  &:hover {
-    background: rgba(104, 104, 104, 0.8);
-  }
-
-  svg {
-    width: 20px;
-    height: 20px;
-    color: white;
-  }
-}
-
-.image__slider__delete {
-  position: absolute;
-  z-index: 2;
-  top: 0.5rem;
-  right: 0.5rem;
-  background: rgba(52, 52, 52, 0.8);
-  padding: 0.25rem;
-  border-radius: 50%;
-  cursor: pointer;
-  @include flex(center, center);
-  width: fit-content;
-
-  &:hover {
-    background: rgba(104, 104, 104, 0.8);
-  }
-
-  svg {
-    width: 20px;
-    height: 20px;
-    color: white;
   }
 }
