--- a/frontend/src/scss/modal.scss
+++ b/frontend/src/scss/modal.scss
@@ -24,8 +24,7 @@
   background-color: white;
   padding: 1rem;
   border-radius: 0.5rem;
-  width: clamp(450px, 450px, 90%);
-
+  width: 450px;
   &__main {
     width: 100%;
     height: 100%;
