Update user controller to use updated get user endpoint and update profile page to use updated user endpoint

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -24,7 +24,7 @@ body,
     overflow-y: scroll;
     padding: 2rem 1rem;
     margin-left: 335px;
-
+    height: 100%;
     @media screen and (max-width: 1919px) {
       margin-left: 245px;
     }
