--- a/frontend/src/scss/post.scss
+++ b/frontend/src/scss/post.scss
@@ -3,6 +3,11 @@
   @include flex(stretch, center);
   width: 100%;
   height: 100%;
+
+  @media screen and (max-width: 480px) {
+    @include flex(center, stretch);
+    flex-direction: column;
+  }
 }
 
 .app__post__photos {
@@ -10,6 +15,10 @@
   border: 1px solid red;
   height: 100%;
   background: black;
+
+  @media screen and (max-width: 480px) {
+    width: 100%;
+  }
 }
 
 .app__post__info {
@@ -21,6 +30,10 @@
   @include flex(flex-start, flex-start);
   flex-direction: column;
   gap: 0.5rem;
+
+  @media screen and (max-width: 480px) {
+    width: 100%;
+  }
 }
 
 .app__post__header {
