--- a/frontend/src/scss/comment.scss
+++ b/frontend/src/scss/comment.scss
@@ -1,6 +1,8 @@
 @use "../scss/index.scss" as *;
 
-.app__comment__wrapper {
+.app__comment {
+  @include flex(flex-start, flex-start);
+  gap: 0.5rem;
   width: 100%;
 
   svg {
@@ -9,47 +11,43 @@
     cursor: pointer;
   }
 
-  .app__comment {
-    @include flex(flex-start, flex-start);
-    gap: 0.5rem;
-    width: 100%;
-
-    &__content {
-      flex: 1;
-    }
+  img {
+    height: 32px;
+    width: 32px;
+    border-radius: 50%;
   }
 
-  .app__comment__stats {
-    @include flex(center, flex-start);
-    gap: 0.5rem;
-    width: 100%;
-    padding-top: 0.5rem;
-    font-size: 0.9rem;
-
-    .app__comment__date {
-      color: $light-font;
-    }
-
-    .app__comment__likes,
-    .app__comment__reply {
-      cursor: pointer;
-      font-weight: 600;
-      color: $light-font;
-    }
+  &__content {
+    flex: 1;
   }
+}
 
-  .app__comment__replies {
+.app__comment__stats {
+  @include flex(center, flex-start);
+  gap: 0.5rem;
+  width: 100%;
+  padding-top: 0.5rem;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  color: $light-font;
+
+  .app__semibold__pointer {
     cursor: pointer;
     font-weight: 600;
-    color: $light-font;
-    font-size: 0.9rem;
-    @include flex(center, flex-start);
-    margin-top: 1rem;
-    .app__comment__reply__line {
-      height: 0;
-      width: 2rem;
-      border-bottom: 1px solid $light-gray;
-      margin-right: 1rem;
-    }
+  }
+}
+
+.app__comment__replies {
+  color: $light-font;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  @include flex(center, flex-start);
+  margin-top: 1rem;
+
+  .app__comment__reply__line {
+    height: 0;
+    width: 2rem;
+    border-bottom: 1px solid $light-gray;
+    margin-right: 1rem;
   }
 }
