--- a/frontend/src/scss/comment.scss
+++ b/frontend/src/scss/comment.scss
@@ -37,17 +37,25 @@
   }
 }
 
-.app__comment__replies {
+.app__replies__btn {
   color: $light-font;
   font-size: 0.75rem;
   line-height: 1rem;
   @include flex(center, flex-start);
-  margin-top: 1rem;
+  margin: 0.5rem 0;
+  cursor: pointer;
 
-  .app__comment__reply__line {
+  .app__reply__line {
     height: 0;
     width: 2rem;
     border-bottom: 1px solid $light-gray;
     margin-right: 1rem;
   }
+}
+
+.app__replies {
+  @include flex(flex-start, center);
+  flex-direction: column;
+  margin-left: 3rem;
+  gap: 0.75rem;
 }
