--- a/frontend/src/scss/post.scss
+++ b/frontend/src/scss/post.scss
@@ -52,9 +52,13 @@
   @include flex(center, flex-start);
   gap: 0.5rem;
   width: 100%;
+  cursor: pointer;
   svg {
     height: 24px;
     width: 24px;
+    &:hover {
+      opacity: 0.5;
+    }
   }
 }
 
