--- a/frontend/src/scss/post.scss
+++ b/frontend/src/scss/post.scss
@@ -43,7 +43,7 @@
   flex: 1;
   width: 100%;
   padding: 1rem 0;
-  overflow-y: hidden;
+  overflow-y: scroll;
   border-top: 1px solid $light-gray;
   border-bottom: 1px solid $light-gray;
 }
