--- a/frontend/src/scss/Modals/createPost.scss
+++ b/frontend/src/scss/Modals/createPost.scss
@@ -1,4 +1,4 @@
-@use "../scss/index.scss" as *;
+@use "../index.scss" as *;
 
 .create__post__header {
   padding-bottom: 0.5rem;
@@ -70,11 +70,7 @@
   }
 
   textarea {
-    resize: none;
-    outline: none;
-    border: 0;
     padding: 0.25rem 0.5rem;
-    width: 100%;
     flex: 1;
   }
 }
