--- a/frontend/src/scss/Pages/post.scss
+++ b/frontend/src/scss/Pages/post.scss
@@ -1,4 +1,5 @@
-@use "../scss/index.scss" as *;
+@use "../index.scss" as *;
+
 .app__post {
   @include flex(stretch, center);
   width: 100%;
@@ -67,12 +68,6 @@
   width: 100%;
   padding: 0.5rem 0;
   border-top: 1px solid $light-gray;
-  textarea {
-    border: 0;
-    resize: none;
-    outline: none;
-    width: 100%;
-  }
 }
 
 .app__post__date {
