--- a/frontend/src/scss/input.scss
+++ b/frontend/src/scss/input.scss
@@ -1,4 +1,4 @@
-@use "../scss/" as *;
+@use '../scss/' as *;
 
 .app__input {
   @include flex(flex-start, center);
@@ -23,10 +23,4 @@
 .bottom {
   border-bottom-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
-}
-
-input {
-  width: 100%;
-  border: none;
-  outline: none;
 }
