--- a/frontend/src/scss/Navbar/navbarItem.scss
+++ b/frontend/src/scss/Navbar/navbarItem.scss
@@ -1,9 +1,10 @@
 @use '../index.scss' as *;
 
-button {
+li {
   background-color: transparent;
   border: none;
   width: 100%;
+  list-style: none;
 
   @media screen and (max-width: 768px) {
     width: fit-content;
@@ -15,8 +16,8 @@ button {
   gap: 1rem;
   padding: 0.75rem;
   border-radius: 2rem;
-  text-decoration: none;
   cursor: pointer;
+  text-decoration: none;
 
   &:hover {
     background-color: #fafafa;
@@ -26,8 +27,7 @@ button {
     }
   }
 
-  .app__navbar__item__icon,
-  .app__navbar__item__img {
+  .app__navbar__item__icon {
     width: 24px;
     height: 24px;
     border-radius: 50%;
@@ -44,9 +44,5 @@ button {
     @media screen and (max-width: 768px) {
       display: none;
     }
-  }
-
-  @media screen and (max-width: 767px) {
-    padding: 0.25rem;
   }
 }
