--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -15,10 +15,10 @@ body,
 }
 
 textarea {
-  resize: none;
-  outline: none;
-  border: 0;
   width: 100%;
+  border: 0;
+  outline: none;
+  resize: none;
 }
 
 input {
@@ -36,43 +36,72 @@ input[type='file'] {
   display: none;
 }
 
+button {
+  width: 100%;
+  border: none;
+  background-color: transparent;
+}
+
 button:disabled {
-  opacity: 0.5;
   cursor: not-allowed;
+  opacity: 0.5;
+}
+
+img {
+  -webkit-user-drag: none;
 }
 
 .flex__center {
   @include flex(center, center);
 }
 
+.absolute__top__right {
+  position: absolute;
+  inset: 0.5rem 0.5rem auto auto;
+}
+
+.absolute {
+  position: absolute;
+  inset: 0;
+}
+
 .primary__outline__btn {
   width: 100%;
   padding: 0.5rem 1rem;
+  border: none;
   border-radius: 0.5rem;
   background-color: $primary-color;
   color: white;
-  border: none;
   cursor: pointer;
 }
 
 .secondary__outline__btn {
   width: 100%;
   padding: 0.5rem 1rem;
-  border-radius: 0.5rem;
   border: 1px solid gray;
+  border-radius: 0.5rem;
   cursor: pointer;
 }
 
 .primary__btn {
   width: fit-content;
-  color: $primary-color;
   border: none;
-  text-decoration: underline;
+  color: $primary-color;
   cursor: pointer;
+  text-decoration: underline;
 }
 
 .secondary__btn {
   width: fit-content;
   border: none;
   cursor: pointer;
+}
+
+.font__color__light {
+  color: $light-font;
+}
+
+.semibold__pointer {
+  cursor: pointer;
+  font-weight: 600;
 }
