--- a/frontend/src/scss/Modals/createPost.scss
+++ b/frontend/src/scss/Modals/createPost.scss
@@ -1,53 +1,28 @@
-@use "../index.scss" as *;
+@use '../index.scss' as *;
 
 .create__post__header {
+  height: 2rem;
   padding-bottom: 0.5rem;
   border-bottom: 1px solid $light-gray;
+
   h4 {
-    text-align: center;
     width: 100%;
+    text-align: center;
   }
 }
 
 .create__post__content {
-  height: calc(100% - 27px);
-}
-
-.create__post__content__drag {
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-
-  @media screen and (max-width: 480px) {
-    margin: 1rem auto;
-  }
-
-  svg {
-    height: 5rem;
-    width: 5rem;
-    stroke-width: 1;
-  }
-
+  height: calc(100% - 2rem);
   span {
-    font-size: 1.25rem;
-    padding-bottom: 1rem;
+    text-align: center;
   }
-
-  label {
-    text-decoration: underline;
-    cursor: pointer;
-  }
-}
-
-.drag__active {
-  background-color: $light-gray;
 }
 
 .create__post__caption {
   @include flex(flex-start, flex-start);
   flex-direction: column;
-  height: 100%;
   gap: 0.5rem;
+  height: 100%;
 
   &__header {
     @include flex(center, flex-start);
@@ -63,14 +38,12 @@
     }
   }
 
-  &__photo {
-    width: 100%;
-    max-height: 100%;
-    aspect-ratio: 1/1;
+  .image__wrapper {
+    height: fit-content;
   }
 
   textarea {
+    min-height: 4rem;
     padding: 0.25rem 0.5rem;
-    flex: 1;
   }
 }
