--- a/frontend/src/scss/Modals/modal.scss
+++ b/frontend/src/scss/Modals/modal.scss
@@ -1,14 +1,12 @@
-@use "../index.scss" as *;
+@use '../index.scss' as *;
 
 #modal {
   @include flex(center, center);
   position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
+  inset: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  z-index: 1;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
 
@@ -21,10 +19,12 @@
   @include flex(center, center);
   flex-direction: column;
   gap: 0.5rem;
-  background-color: white;
+  width: 450px;
   padding: 1rem;
   border-radius: 0.5rem;
-  width: 450px;
+  background-color: white;
+  overflow-y: auto;
+
   &__main {
     width: 100%;
     height: 100%;
