--- a/frontend/src/scss/Pages/post.scss
+++ b/frontend/src/scss/Pages/post.scss
@@ -1,11 +1,11 @@
-@use "../index.scss" as *;
+@use '../index.scss' as *;
 
 .app__post {
   @include flex(stretch, center);
   width: 100%;
   height: 100%;
 
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 1024px) {
     @include flex(center, stretch);
     flex-direction: column;
   }
@@ -13,65 +13,37 @@
 
 .app__post__photos {
   flex: 2;
-  border: 1px solid red;
   height: 100%;
   background: black;
 
-  @media screen and (max-width: 480px) {
+  .main__image img {
+    border-radius: 0;
+  }
+
+  .image__carousel__wrapper {
+    width: fit-content;
+    padding: 0.5rem;
+  }
+
+  @media screen and (max-width: 1024px) {
     width: 100%;
   }
 }
 
 .app__post__info {
-  flex: 1;
-  border: 1px solid green;
-  padding: 1rem;
-  padding-bottom: 0;
-  height: 100%;
   @include flex(flex-start, flex-start);
   flex-direction: column;
+  flex: 1;
   gap: 0.5rem;
+  border: 1px solid $light-gray;
 
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 1024px) {
     width: 100%;
   }
 }
 
-.app__post__comments {
-  @include flex(flex-start, flex-start);
-  flex-direction: column;
-  gap: 0.75rem;
-  flex: 1;
-  width: 100%;
-  padding: 1rem 0;
-  overflow-y: scroll;
-  border-top: 1px solid $light-gray;
-  border-bottom: 1px solid $light-gray;
-}
-
-.app__post__stats {
-  @include flex(center, flex-start);
-  gap: 0.5rem;
-  width: 100%;
-  cursor: pointer;
-  svg {
-    height: 24px;
-    width: 24px;
-    &:hover {
-      opacity: 0.5;
-    }
-  }
-}
-
-.app__post__add__comment {
-  @include flex(flex-start, flex-start);
-  width: 100%;
-  padding: 0.5rem 0;
-  border-top: 1px solid $light-gray;
-}
-
 .app__post__date {
-  color: $light-font;
+  padding: 0 1rem;
   font-size: 0.75rem;
   line-height: 1rem;
 }
