--- a/frontend/src/scss/Post/comment.scss
+++ b/frontend/src/scss/Post/comment.scss
@@ -16,47 +16,42 @@
     width: 32px;
     border-radius: 50%;
   }
-
-  &__content {
-    flex: 1;
-  }
 }
 
-.app__comment__stats {
-  @include flex(center, flex-start);
-  gap: 0.5rem;
-  width: 100%;
-  padding-top: 0.5rem;
-  font-size: 0.75rem;
-  line-height: 1rem;
-  color: $light-font;
+.app__comment__content {
+  flex: 1;
 
-  .app__semibold__pointer {
-    cursor: pointer;
-    font-weight: 600;
+  .app__comment__stats {
+    @include flex(center, flex-start);
+    gap: 0.5rem;
+    width: 100%;
+    padding-top: 0.5rem;
+    color: $light-font;
+    font-size: 0.75rem;
+    line-height: 1rem;
   }
 }
 
 .app__replies__btn {
+  @include flex(center, flex-start);
+  gap: 1rem;
+  margin: 0.5rem 0;
   color: $light-font;
+  cursor: pointer;
   font-size: 0.75rem;
   line-height: 1rem;
-  @include flex(center, flex-start);
-  margin: 0.5rem 0;
-  cursor: pointer;
 
   .app__reply__line {
     height: 0;
     width: 2rem;
     border-bottom: 1px solid $light-gray;
-    margin-right: 1rem;
   }
 }
 
 .app__replies {
   @include flex(flex-start, center);
   flex-direction: column;
-  margin-left: 3rem;
   gap: 0.75rem;
   width: calc(100% - 3rem);
+  margin-left: 3rem;
 }
